AJUSTE DO GEMFILE

--- a/app/views/avaliadores/index.html.erb
+++ b/app/views/avaliadores/index.html.erb
@@ -1,11 +1,11 @@
 <div id="aluno_logado" class="button">
 <fieldset>
-	<legend >Logado</legend>
+	<legend>Logado</legend>
 	<div id="facemenu">
 		<ul>
 			<li>
 				<div class="retrato"><center>
-				<%= image_tag(current_avaliador.photo.url(:tamanho_pequeno)) %>
+				<%= image_tag(current_avaliador.foto.url(:tamanho_pequeno)) %>
 				<!---->
 				</center></div>
 			<ul><li>
