--- a/app/views/avaliadores/selecionar_imagem.html.erb
+++ b/app/views/avaliadores/selecionar_imagem.html.erb
@@ -6,7 +6,7 @@
      <%= render "shared/object_error_messages", :object => @avaliador %>
     <div class="field">
        <b><%= l.label "Imagem" %>.:</b><br>
-       <%= l.file_field :photo %><BR /><i id="blue">(Deixe em branco se não quiser alterar a sua imagem!)</i><br /></b><br />
+       <%= l.file_field :foto %><BR /><i id="blue">(Deixe em branco se não quiser alterar a sua imagem!)</i><br /></b><br />
     </div>
   
     <br>
