--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,7 @@
         <li>
           <div class="retrato">
             <center>
-              <%= image_tag(current_avaliador.photo.url(:tamanho_pequeno)) %>
+              <%= image_tag(current_avaliador.foto.url(:tamanho_pequeno)) %>
             </center>
           </div>
           <ul> 
