--- a/app/views/alunos/home.html.erb
+++ b/app/views/alunos/home.html.erb
@@ -6,7 +6,7 @@
         <li>
           <div class="retrato">
             <center>
-              <%= image_tag(current_aluno.photo.url(:tamanho_pequeno)) %>
+              <%= image_tag current_aluno.foto.url %>
             </center>
           </div>
           <ul> 
