--- a/app/views/alunos/registrations/edit.html.erb
+++ b/app/views/alunos/registrations/edit.html.erb
@@ -10,7 +10,7 @@
 <FIELDSET><LEGEND><h2><label>Editando Dados</label></h2></LEGEND>
 <DIV id="localization">
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put,:multipart => true }) do |l| %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |l| %>
     <%= render "shared/error_messages", :target => @aluno %> 
     <div class="field">
         <b><%= l.label "Nome:"%>&nbsp<i id="red">*</i>&nbsp</b>
@@ -43,7 +43,7 @@
     </div>
     <div class="field">
         <b><%= l.label "Mudar Imagem:  " %></b><br />
-        <%= l.file_field :photo %>
+        <%= l.file_field :foto %>
     </div>
     <div class="field">
         <b><%= l.label "E-mail:" %>&nbsp<i id="red">*</i>&nbsp</b>
