--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,7 @@
       <ul> 
         <li class='header-sub '><span>
             <center>
-              <%= image_tag(current_aluno.photo.url(:tamanho_pequeno),
-                size:'90x90') %>
+              <%= image_tag(current_aluno.foto, size:'90x90') %>
             </center></span>
           
             <ul>
@@ -30,7 +29,7 @@
         <li>
           <div class="retrato">
             <center>
-              <%= image_tag(current_avaliador.foto.url(:tamanho_pequeno)) %>
+             
             </center>
           </div>
           <ul> 
