--- a/app/views/alunos/_listar_atividades.html.erb
+++ b/app/views/alunos/_listar_atividades.html.erb
@@ -27,18 +27,22 @@ Lista de atividades de <%= current_aluno.nome %></font><br /><br />
             <td><center><%= atividade.inicio %></center></td>
             <td><center><%= atividade.termino %></center></td>
             <td><center><%= atividade.carga_horaria %></center></td>
-            <td><center><%= atividade.carga_horaria_aceita %></center></td>
+            <% if atividade.carga_horaria_aceita.nil? %>
+                <td><center>Esta atividade ainda não foi avaliada</center></td>
+            <% else %>
+                <td><center><%= atividade.carga_horaria_aceita %></center></td>
+            <% end %>
             <td><center>
                 <a href = "<%= edit_atividade_path(atividade) %>" alt="Anexar Comprovante">
-                    <%= image_tag atividade.comprovante.url(:tamanho_pequeno) %>
+                    <%= image_tag("fallback/pdf.png", :width=>"60",:height=>"50", :alt=>"Anexar Comprovante") %>
                 </a></center>
             </td>
-            <% if atividade.comprovante_file_name.nil? %>
+            <% if atividade.comprovante.nil? %>
                     <center><TD><label class="large">Sem Comprovante!</label></TD></center>
                 <% else %>
                     <td><center>
                         <a href = "<%= atividade.comprovante %>" alt="Anexar Comprovante">
-                        <%= image_tag("samples/iconpdf.png", :width=>"60",:height=>"50", :alt=>"Ver
+                        <%= image_tag("fallback/pdf-icon.png", :width=>"60",:height=>"50", :alt=>"Ver
 Comprovante") %>
                         </center></a>
                     </td>
@@ -66,7 +70,7 @@ Comprovante") %>
 
 <table id="bottom" summary="Atividades">
     <CAPTION>
-        <%= current_aluno.contar_horas_aceitadas(current_aluno) %>
+        <%= current_aluno.contar_horas_aceitas(current_aluno.id) %>
    </CAPTION>
 </table>
 </div> 
