refatoração do gerador de pdf

--- a/app/views/avaliadores/index.html.erb
+++ b/app/views/avaliadores/index.html.erb
@@ -5,7 +5,7 @@
 		<ul>
 			<li>
 				<div class="retrato"><center>
-				<%= image_tag(current_avaliador.foto.url(:tamanho_pequeno)) %>
+				<%= image_tag(current_avaliador.foto) %>
 				<!---->
 				</center></div>
 			<ul><li>
