--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
         <li>
           <div class="retrato">
             <center>
-             
+             <%= image_tag(current_avaliador.foto, size:'90x90') %>
             </center>
           </div>
           <ul> 
