--- a/app/views/avaliadores/_alunos.html.erb
+++ b/app/views/avaliadores/_alunos.html.erb
@@ -6,7 +6,7 @@
                     
                 <div class="wp-caption wrap">
                     <center>
-                        <%= image_tag(aluno.photo.url(:tamanho_pequeno)) %>
+                        <%= image_tag(aluno.foto) %>
                         <p class="wp-caption-text">
                             <% if avaliador_signed_in? and current_avaliador.admin %>
                                 <%= link_to aluno.nome, listagem_de_atividades_do_aluno_x_path(aluno.id),:id =>aluno %>
