--- a/app/views/atividades/_form.html.erb
+++ b/app/views/atividades/_form.html.erb
@@ -9,56 +9,63 @@
 </div>
 
 
-<strong><p><font size="9" color="red">*</font><label>&nbsp Campos Obrigatórios</strong></label></p>
+<strong>
+  <p>
+    <font size="9" color="red">*</font>
+    <label>&nbsp Campos Obrigatórios</label>
+  </p>
+</strong>
 
 <FIELDSET>
-   <LEGEND><label>Insira aqui sua Atividade</label></LEGEND>
+   <LEGEND>
+      <label>Insira aqui sua Atividade</label>
+    </LEGEND>
 
-<%= form_for(@atividade) do |l| %>
+    <%= form_for(@atividade) do |l| %>
  
-<%= render "shared/error_messages", :target => @atividade %>
+        <%= render "shared/error_messages", :target => @atividade %>
 
- <div class="field">
-   <b><%= l.label :nome %>&nbsp<i id="red">*</i>&nbsp
-   <%= l.text_field :nome, :size=>"49" %>
- </div>
- <div class="field">
-   <%= l.label "Modalidade" %>&nbsp<i id="red">*</i>&nbsp
-   <%= l.collection_select(:modalidade_nome, Modalidade.all, :id, :descricao, {:prompt => 'Selecione'}) %>
- </div>
- <div class="field">
-   <%= l.label :inicio %><br />
-   <%= l.date_select :inicio, :start_year => 2006, :order => [:day, :month, :year]%>
- </div>
- <div id="aData">
-   <div class="field">
-     <%= l.label :termino %><br />
-     <%= l.date_select :termino, :start_year => 2006,:order => [:day,:month,:year] %>
-   </div>
- </div>
- <div class="field">
-   <%= l.label :carga_horaria %>&nbsp<i id="red">*</i>&nbsp
-   <%= l.text_field :carga_horaria, :size=>"41" %>
- </div>
-
- <div class="field">
- <%= l.label "Anexe aqui seu comprovante: " %>
- </div>
- <div class="field">
- <%= l.file_field :comprovante %><br ><br >
- </div>
- 
- <div class="field">
-   <%= l.hidden_field :aluno_id, :readonly => "true", :value => @aluno.id %>
- </div></FIELDSET>
- <div class="botao_left">
-               <span class="luz">
-                       <%= l.submit "Enviar", :class=>"botao", :id=>'id_botao' %>
-               </span>
+        <div class="field">
+          <b><%= l.label :nome %>&nbsp<i id="red">*</i>&nbsp
+          <%= l.text_field :nome, :size=>"49" %>
        </div>
-       <div class="botao_left">
-   <p><button type="button" class="botao", id='id_botao2' onclick="JavaScript:index()" >
-               Cancelar&nbsp<font size="30"></p></font>
-           </button>
-   </div>
+       <div class="field">
+         <%= l.label "Modalidade" %>&nbsp<i id="red">*</i>&nbsp
+         <%= l.collection_select(:modalidade_nome, Modalidade.all, :descricao, :descricao, {:prompt => 'Selecione'}) %>
+       </div>
+       <div class="field">
+         <%= l.label :inicio %><br />
+         <%= l.date_select :inicio, :start_year => 2006, :order => [:day, :month, :year]%>
+       </div>
+       <div id="aData">
+         <div class="field">
+           <%= l.label :termino %><br />
+           <%= l.date_select :termino, :start_year => 2006,:order => [:day,:month,:year] %>
+         </div>
+       </div>
+       <div class="field">
+         <%= l.label :carga_horaria %>&nbsp<i id="red">*</i>&nbsp
+         <%= l.text_field :carga_horaria, :size=>"41" %>
+       </div>
+       <div class="field">
+       <%= l.label "Anexe aqui seu comprovante: " %>
+       </div>
+       <div class="field">
+       <%= l.file_field :comprovante %><br ><br >
+       </div>
+       <div class="field">
+         <%= l.hidden_field :aluno_id, :readonly => "true", :value => @aluno.id %>
+       </div>
+</FIELDSET>
+<div class="botao_left">
+  <span class="luz">
+    <%= l.submit "Enviar", :class=>"botao", :id=>'id_botao' %>
+  </span>
+</div>
+<div class="botao_left">
+  <p>
+    <button type="button" class="botao", id='id_botao2' onclick="JavaScript:index()" >
+      Cancelar&nbsp
+    </button>
+</div>
 <%- end -%>
