--- a/app/views/layouts/_current_user.html.erb
+++ b/app/views/layouts/_current_user.html.erb
@@ -32,17 +32,17 @@
                 <ul>
                     <li class='has-sub '>
                         <span>
-                            <%= link_to 'Alunos', pdf_reports_alunos_report_path(@alunos, format: "pdf")  %>
+                            <%= link_to 'Alunos', alunos_pdf_path  %>
                         </span>
                     </li>
                     <li class='has-sub '>
                         <span>
-                            <%= link_to 'Avaliadores', pdf_reports_avaliadores_report_path(@avaliadores, format: "pdf")%>
+                            <%= link_to 'Avaliadores', avaliadores_pdf_path %>
                         </span>
                     </li>
                     <li class='has-sub '>
                         <span>
-                            <%= link_to 'Atividades', pdf_reports_atividades_report_path(@atividades, format: "pdf")%>
+                            <%= link_to 'Atividades', total_atividades_path %>
                         </span>
                     </li>
                 </ul>
