--- a/app/views/avaliacoes/_listagem_de_atividades_do_aluno_x.html.erb
+++ b/app/views/avaliacoes/_listagem_de_atividades_do_aluno_x.html.erb
@@ -75,7 +75,7 @@
                     </center>
                 </td>
 
-                <% if atividade.comprovante_file_name.nil? %>
+                <% if atividade.comprovante.nil? %>
                     <center>
                         <TD>Nao há comprovante</TD>
                     </center>
