--- a/app/views/layouts/_current_user.html.erb
+++ b/app/views/layouts/_current_user.html.erb
@@ -55,7 +55,7 @@
         <ul>
             <li><span><%= link_to 'Pagina Inicial',avaliador_home_path%></span></li>
             <li><span><%= link_to 'Avaliadores', total_avaliadores_path%></span></li>
-            <li><span><%= link_to 'Atividades', total_atividades_path %></span></li>
+            <li><span><%= link_to 'Atividades', aluno_atividades_path %></span></li>
             <li><span><%= link_to 'Editar seus Dados', edit_avaliador_registration_path%></span></li>
         </ul>
     </div>
