--- a/app/views/avaliacoes/listar_atividades_complementares.html.erb
+++ b/app/views/avaliacoes/listar_atividades_complementares.html.erb
@@ -72,7 +72,7 @@
                         </center>
                     </td>
 
-                    <% if atividade.comprovante_file_name.nil? %>
+                    <% if atividade.comprovante.path.nil? %>
                         <center>
                             <TD>Nao há comprovante</TD>
                         </center>
