--- a/app/assets/stylesheets/INTERFACE.css
+++ b/app/assets/stylesheets/INTERFACE.css
@@ -112,7 +112,7 @@ p img.top {margin-top:0;}
 
 blockquote {margin:1.5em;padding:1em;font-style:italic;font-size:.9em;}
 
-.small {font-size:.7em;}
+.small {font-size:0.7em;}
 
 .large {font-size:1.1em;}
 
