--- a/app/controllers/profile_image.html.erb
+++ b/app/controllers/profile_image.html.erb
@@ -8,7 +8,7 @@
 <FIELDSET><LEGEND><H1><label> Editar Imagem do Perfil </label></H1></LEGEND>
 <DIV id="localization">
 
-<%= form_for(@aluno, :url=>{:action=>'load_imagem'}) do |l| %>
+<%= form_for(@aluno) do |l| %>
      <%= render "shared/object_error_messages", :object => @aluno %> 
     <div class="field">
        <b><%= l.label "Imagem:" %></b>
