--- a/app/views/alunos/edit.html.erb
+++ b/app/views/alunos/edit.html.erb
@@ -1,77 +1,42 @@
-<table>
-	<TR>
-		<TD>
-			<%= image_tag current_aluno.photo.url(:tamanho_medio) %>
-		</TD>
-		<TD>
-			<h1>
-				<CENTER>Editando dados Pessoais<br/>
-				de <%= current_aluno.nome %></CENTER>
-			</h1>
-		</TD>
-	</TD>
-</table>
-<%= form_for(@aluno, :html => { :multipart => true },:url=>{:action=>'update'}) do |l| %>
-     <%= render "shared/error_messages", :target => @aluno %> 
-    <p>
-       <b>Nome</b><br>
-	   <%= l.text_field :nome %>
-	</p>
-	<p>
-	   <b>Curso</b><br>
-	    <%= l.text_field :curso %>
-	</p>
-	<p>
-	  <b>Periodo</b><br/>
-	    <%= l.text_field :periodo %> 
-    </p>
-	<p>
-	  <b>Matricula.:</b><br>
-	    <%= l.text_field :matricula %>
-	</p>
-    <p>
-	   <b>Idade.:</b><br/>
-	    <%= l.text_field :idade	%> 
-    </p>
-	<p>
-	    <b>Sexo.:</b>
-	    <%= l.radio_button :sexo, "Masculino" %>Masculino
-	    <%= l.radio_button :sexo, "Feminino" %>Feminino
-    </p>
-	<p>
-	   <b>E-mail.:</b><br>
-	    <%= l.text_field :email %>
-    </p>
-	
-<p>
-	   <b>Senha.:</b><br>
-        <%= l.password_field :password %>
-    </p>
-	<p>
-	  <b>Confirme sua senha.:</b><br>
-	    <%= l.password_field :password_confirmation %>
-    </p>
-	<div class="field">
-    	<%= l.label "Mudar Imagem:  " %><br />
-  	</div>
-  	<div>
-  		<%= l.file_field :photo %>
-  	</div>
-	  <br>
-	  <div class="actions">
-	    <%= l.submit "Atualizar dados"%>
-	  	<form>
-            <input type="button" value="voltar" onClick="javascript:index()" >
-        </form>
-	</div>
-	  
-<% end %>
-
-
-<script type="text/javascript">
-<!--
-  function index(){
-    window.location.href = " ";
-  }
-//-->
+<script language= "JavaScript">
+    function index()
+    {
+        location.href = "/aluno/home/";
+    }
 </script>
+
+<FIELDSET><LEGEND><H1><label> Editar senha de acesso</label></H1></LEGEND>
+<DIV id="localization">
+
+<%= form_for(@aluno, :url=>{:action=>'update'}) do |l| %>
+     <%= render "shared/object_error_messages", :object => @aluno %> 
+    <div class="field">
+        <i id="blue" class="small">(Infome sua nova senha!)</i>
+        <b><br /><%= l.label "Senha:" %> </b>&nbsp&nbsp<br />
+            <%= l.password_field :password, :size=>'20' %>
+    </div>
+
+    <div class="field">
+        <i id="blue" class="small">(Por favor confirme a sua nova senha.)</i><br />
+        <b><%= l.label "Repita a senha:" %>&nbsp</b><br />
+        <%= l.password_field :password_confirmation, :size=>"20" %>
+    </div>
+
+    <div class="field">
+        <i id="red" class="small">(Informe a sua senha anterior! )</i><br />
+        <b><%= l.label "Senha Atual:" %>&nbsp&nbsp<i id="red">*</i>&nbsp&nbsp</b><br />
+        <%= l.password_field :current_password, :size=>"21" %>
+    </div>
+  
+    <br>
+    <br></FIELDSET>
+    <div class="botao_left">
+                <span class="luz"><%= l.submit "Enviar", :class=>"botao", :id=>'id_botao' %></span>
+    </div>
+    <div class="botao_left">
+        <p>
+        <button type="button" class="botao", id='id_botao2' onclick="JavaScript:index()" >
+            Cancelar&nbsp<font size="30"></p></font>
+        </button>
+    </div>
+<%- end -%>
