Ajuste da ImagemDoPerfilDoAluno em AlunosController

--- a/app/views/alunos/home.html.erb
+++ b/app/views/alunos/home.html.erb
@@ -11,12 +11,11 @@
           </div>
           <ul> 
             <li>
-              <%= link_to "Atualizar Imagem", "/selecionar_imagem/#{current_aluno.id}/selecionar_imagem" %>
+              <%= link_to "Atualizar imagem", profile_image_path %>
             </li>
-             
             <li>
-              <%= link_to 'Remover Imagem',  "/selecionar_imagem/#{current_aluno.id}/remover_imagem" %>
-            </li> 
+              <%= link_to "Remover imagem", default_image_path %>
+            </li>
           </ul> 
         </li>
         </ul>
