Ajuste da SenhaDoPerfilDoAluno em AlunosController

--- a/app/views/alunos/home.html.erb
+++ b/app/views/alunos/home.html.erb
@@ -14,6 +14,9 @@
               <%= link_to "Atualizar imagem", profile_image_path %>
             </li>
             <li>
+              <%= link_to "Alterar senha", password_path(current_aluno.id) %>
+            </li>
+            <li>
               <%= link_to "Remover imagem", default_image_path %>
             </li>
           </ul> 
