Ajustes nos forms do Avaliador

--- a/app/views/avaliacoes/listar_atividades_complementares.html.erb
+++ b/app/views/avaliacoes/listar_atividades_complementares.html.erb
@@ -1,6 +1,7 @@
 <BR />
 <CENTER>
-<%= form_tag designar_path,  :method => :put do %>
+
+<%= form_tag designar_url,  :method => :put do  %>
         <table id="home" class='avaliacoes' summary="Atividades">
             <caption>Atividades complementares</caption>
 
