--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 		<%= render 'shared/stylesheets' %>
 		<%= javascript_include_tag :application %>
         <%= javascript_include_tag :all %>
+        <%= javascript_include_tag :defaults %>
 		<%= javascript_include_tag "jquery-1.4.4.min.js" %>
 		<%= javascript_include_tag "jquery.maskedinput.js" %>
 		<%= javascript_include_tag "jquery.js" %>
