--- a/app/views/avaliadores/total_alunos.html.erb
+++ b/app/views/avaliadores/total_alunos.html.erb
@@ -3,20 +3,33 @@
 	<meta charset="UTF-8">
     <% if @alunos.empty? %>
 		<head>
-	        <script type="text/javascript">
-				<!-- 
+	       	<script language="JavaScript" type="text/javascript">
 				function Redirect(){
 				    window.location.href = "<%= avaliador_home_path %>" 
 				}
-				document.write("You will be redirected to main page in 10 sec.")
-				setTimeout('Redirect()', 10000)
-				-->
+				document.write("<% flash[:alert]='Não foram encontrados alunos'%>");
+				document.write("<label>Você será redirecionado para a pagina inicial em <span id='tempo'>0</span> segundos.</label>");
 			</script>
 		</head>
 		<div>
-			Se não foi redirecionado, siga por aqui <a href='<%= avaliador_home_path %>'>Home</a>
+			<label>Se não foi redirecionado(a), siga por aqui&nbsp&nbsp</label><a href='<%= avaliador_home_path %>'>Página inicial</a>
+			<script language="JavaScript" type="text/javascript">relogio();</script>
 		</div>
 	<% else %>
 		<div><%= render :partial=>"alunos", :locals=>{:alunos=>@alunos}%>	</div>
 	<% end %>
 </html>
+
+<script type="text/javascript">
+	var segundos = 3;
+	function relogio() {
+		document.getElementById('tempo').innerHTML=segundos;
+		if(segundos == 0) {	
+			top.location.href="<%= avaliador_home_path %>";
+		}
+		if (segundos != 0){
+			segundos = segundos-1;
+			setTimeout('Redirect()', 3000)
+		}
+	}relogio();
+</script>
