--- a/app/views/alunos/home.html.erb
+++ b/app/views/alunos/home.html.erb
@@ -34,7 +34,7 @@
 <div id="HomeAtividadesPage">
   <div  height='150px'>
     <% if current_aluno.atividades.empty? %>
-      <div class="infobar" id="home">
+      <div class="red_infobar">
         <div>Você não possui atividades.</div>
       </div>
     <% else %>
