ajuste no envio de imagens no avaliador

--- a/app/views/avaliacoes/_listagem_de_atividades_do_aluno_x.html.erb
+++ b/app/views/avaliacoes/_listagem_de_atividades_do_aluno_x.html.erb
@@ -32,7 +32,7 @@
                 <% if avaliador_signed_in? and current_avaliador.admin %>
                     <td>
                        <center>
-                          <%= check_box_tag "atividades_ids[]", atividade.id %>
+                          <%= check_box_tag "atividade[atividades_ids][]", atividade.id, @atividade.include?(atividade) %>
                        </center>
                    </td>
                 <% elsif avaliador_signed_in? and current_avaliador.admin == false %>
