--- a/app/views/avaliadores/index.html.erb
+++ b/app/views/avaliadores/index.html.erb
@@ -12,7 +12,7 @@
 <%= link_to "Atualizar Imagem","/avaliador/#{current_avaliador.id}/selecionar_imagem"   %>
 			</li>
 			<li>
-<%= link_to 'Remover Imagem',"/avaliador/#{current_avaliador.id}/remover_imagem"%></li>
+				<%= link_to 'Remover Imagem',  "/avaliador/#{current_avaliador.id}/remover_imagem" %>
 			</ul>
 </ul></div>
 <p id="loged_in">
