--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
           </div>
           <ul> 
             <li>
-              <%= link_to "Atualizar Imagem" %>
+              <%= link_to "Atualizar Imagem", selecionar_imagem_avaliador_path(current_avaliador) %>
             </li>
             <li class='header-sub '>
                 <span>
