--- a/app/views/avaliadores/selecionar_imagem.html.erb
+++ b/app/views/avaliadores/selecionar_imagem.html.erb
@@ -1,21 +1,33 @@
-<H1><BR /><BR />
-    Editar Imagem do Perfil
-</H1><BR /><BR />
+<script language= "JavaScript">
+    function index()
+    {
+        location.href = "/avaliador/home/";
+    }
+</script>
+
+<FIELDSET><LEGEND><H1><label> Editar Imagem do Perfil </label></H1></LEGEND>
+<DIV id="localization">
 
 <%= form_for(@avaliador, :url=>{:action=>'load_imagem'}, :html => { :multipart => true }) do |l| %>
      <%= render "shared/object_error_messages", :object => @avaliador %>
     <div class="field">
-       <b><%= l.label "Imagem" %>.:</b><br>
-       <%= l.file_field :foto %><BR /><i id="blue">(Deixe em branco se não quiser alterar a sua imagem!)</i><br /></b><br />
+       <b><%= l.label "Imagem:" %></b>
+       <i id="blue" class="small">(Deixe em branco se não quiser alterar a sua imagem!)</i>
+       <br>
+       <%= l.file_field :foto %><BR /></b>
     </div>
   
     <br>
-    <br>
-    <div class="field">
-        <%= l.submit "Enviar", :id=>"simply_button" %>
-        <%= link_to 'Remover Imagem',  "/avaliador/#{current_avaliador.id}/remover_imagem",
-:id=>"simply_button"%>
+    <br></FIELDSET>
+    <div class="botao_left">
+        <span class="luz"><%= l.submit "Enviar", :class=>"botao", :id=>'id_botao' %></span>
+    </div>
     
+    <div class="botao_left">
+        <p>
+        <button type="button" class="botao", id='id_botao2' onclick="JavaScript:index()" >
+            Cancelar&nbsp<font size="30"></p></font>
+        </button>
     </div>
 <%- end -%>
 
